Release Notes for Cppcheck 2.19

New checks:
-

Improved checking:
-

GUI:
-

Changed interface:
-

Deprecations:
-

Other:
- Removed deprecated support for builds with Qt5.
- Added make variables `CXXOPTS` and `LDOPTS` to extend existing `CXXFLAGS` and `LDFLAGS`.
-